--- a/BusIk/app/src/main/res/layout/client_item.xml
+++ b/BusIk/app/src/main/res/layout/client_item.xml
@@ -8,15 +8,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-   <androidx.cardview.widget.CardView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       app:cardBackgroundColor="@color/teal_200"
-       app:cardCornerRadius="20dp">
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/client_card"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="@color/teal_200"
+        app:cardCornerRadius="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,27 +30,27 @@
                     android:id="@+id/client_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:text="Имя клиента: Иван Иванов"
                     android:textColor="@color/white"
-                    android:text="Имя клиента: Иван Иванов" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/client_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:textSize="20sp"
+                    android:text="Адрес: ул. Пушкина, д. 10, кв. 25"
                     android:textColor="@color/white"
-                    android:text="Адрес: ул. Пушкина, д. 10, кв. 25" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/client_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:textSize="20sp"
+                    android:text="Телефон: +7 999 123-45-67"
                     android:textColor="@color/white"
-                    android:text="Телефон: +7 999 123-45-67" />
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
@@ -65,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="#00C821"
-                    android:text="Пришёл"/>
+                    android:text="Пришёл" />
 
                 <Button
                     android:id="@+id/not_arrived_button"
@@ -76,7 +78,7 @@
                     android:text="Не пришел" />
 
             </LinearLayout>
-       </LinearLayout>
-   </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
