--- a/BusIk/app/src/main/res/layout/activity_auth.xml
+++ b/BusIk/app/src/main/res/layout/activity_auth.xml
@@ -30,15 +30,15 @@
         android:layout_gravity="center"
         android:src="@drawable/ic_launcher_background" />
 
-    <EditText
-        android:id="@+id/username_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/username_hint"
-        android:inputType="textEmailAddress"
-        android:maxLines="1"
-        android:singleLine="true" />
+        <EditText
+            android:id="@+id/username_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="@string/username_hint"
+            android:inputType="number"
+            android:maxLines="1"
+            android:singleLine="true" />
 
     <EditText
         android:id="@+id/password_edit_text"
