--- a/BusIk/app/src/main/res/layout/activity_mark_clients.xml
+++ b/BusIk/app/src/main/res/layout/activity_mark_clients.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:textColor="@color/white"
         android:layout_height="wrap_content"
-        android:background="@color/teal_200"
+        android:background="?attr/colorPrimary"
         android:padding="16dp"/>
 
     <!-- Список клиентов -->
