--- a/BusIk/app/src/main/res/drawable/spinner_bg.xml
+++ b/BusIk/app/src/main/res/drawable/spinner_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <stroke android:width="2dp" android:color="@color/teal_200"/>
-    <solid android:color="@color/white"/>
+    <stroke android:width="2dp" android:color="?attr/colorPrimary"/>
+    <solid android:color="?attr/spinnerItemBackground"/>
     <corners android:radius="4dp"/>
 </shape>
