--- a/BusIk/app/src/main/res/values-night/themes.xml
+++ b/BusIk/app/src/main/res/values-night/themes.xml
@@ -1,19 +1,24 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <declare-styleable name="Theme.BusIk">
+        <attr name="spinnerItemBackground" format="color"></attr>
+        <attr name="myColor" format="color"></attr>
+    </declare-styleable>
+
     <style name="Theme.BusIk" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimary">@color/teal_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorAccent">@color/teal_700</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/teal_700</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/teal_200</item>
-        <item name="spinnerItemBackground">@color/white</item>
-        <item name="myColor">@color/black</item>
+        <item name="android:statusBarColor">@color/teal_700</item>
+        <item name="spinnerItemBackground">?attr/background</item>
+        <item name="myColor">@color/white</item>
         <!-- Customize your theme here. -->
     </style>
 
