--- a/BusIk/app/src/main/res/layout/driver_trip_item.xml
+++ b/BusIk/app/src/main/res/layout/driver_trip_item.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/teal_200"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
