--- a/BusIk/app/src/main/res/layout/activity_register.xml
+++ b/BusIk/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="Регистрация"
-        android:background="@color/teal_200"
+        android:background="?attr/colorPrimary"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
