--- a/BusIk/app/src/main/res/layout/activity_search.xml
+++ b/BusIk/app/src/main/res/layout/activity_search.xml
@@ -13,6 +13,22 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:padding="16dp"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:text="По вашему запросу ничего не найдено"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_trips"
         android:layout_width="match_parent"
