--- a/BusIk/app/src/main/res/values-night/themes.xml
+++ b/BusIk/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="Theme.BusIk">
-        <attr name="spinnerItemBackground" format="color"></attr>
-        <attr name="myColor" format="color"></attr>
+        <attr name="spinnerItemBackground" format="color" />
+        <attr name="myColor" format="color" />
+        <attr name="errorColor" format="color"/>
     </declare-styleable>
 
     <style name="Theme.BusIk" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -19,6 +20,7 @@
         <item name="android:statusBarColor">@color/teal_700</item>
         <item name="spinnerItemBackground">?attr/background</item>
         <item name="myColor">@color/white</item>
+        <item name="errorColor">@color/white</item>
         <!-- Customize your theme here. -->
     </style>
 
