--- a/BusIk/app/src/main/res/values/themes.xml
+++ b/BusIk/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <item name="android:statusBarColor">@color/teal_200</item>
         <item name="spinnerItemBackground">@color/white</item>
         <item name="myColor">@color/black</item>
+        <item name="errorColor">@android:color/darker_gray</item>
         <!-- Customize your theme here. -->
     </style>
 
