--- a/BusIk/app/src/main/res/layout/activity_mark_clients.xml
+++ b/BusIk/app/src/main/res/layout/activity_mark_clients.xml
@@ -16,6 +16,22 @@
         android:background="?attr/colorPrimary"
         android:padding="16dp"/>
 
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:padding="16dp"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:text="На этом рейсе еще нет клиентов"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <!-- Список клиентов -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/client_list"
