--- a/BusIk/app/src/main/res/layout/activity_auth.xml
+++ b/BusIk/app/src/main/res/layout/activity_auth.xml
@@ -23,6 +23,22 @@
         android:gravity="center"
         android:padding="16dp">
 
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="0dp"
+            android:visibility="invisible"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="70dp"
+            android:text="Неправильный логин или пароль"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/logo_image_view"
             android:layout_width="186dp"
