--- a/BusIk/app/src/main/res/layout/spinner_text.xml
+++ b/BusIk/app/src/main/res/layout/spinner_text.xml
@@ -4,7 +4,7 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:textSize="18sp"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
