--- a/BusIk/app/src/main/res/layout/activity_book.xml
+++ b/BusIk/app/src/main/res/layout/activity_book.xml
@@ -114,7 +114,7 @@
             android:id="@+id/driver_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="12dp"
             android:background="@drawable/spinner_bg"
             android:gravity="center"
@@ -123,6 +123,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/bus_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -133,6 +134,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/bus_mark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -143,6 +145,18 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/bus_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/spinner_bg"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Цвет маршрутки: Рыжий"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/trip_cost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
