--- a/BusIk/app/src/main/res/layout/activity_book.xml
+++ b/BusIk/app/src/main/res/layout/activity_book.xml
@@ -38,9 +38,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -120,6 +121,17 @@
             android:gravity="center"
             android:padding="16dp"
             android:text="Водитель: Иван Иванов"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/spinner_bg"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Номер водителя: +375445058007"
             android:textSize="18sp" />
 
         <TextView
