--- a/BusIk/app/src/main/res/layout/activity_client.xml
+++ b/BusIk/app/src/main/res/layout/activity_client.xml
@@ -83,9 +83,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Дата"
+                android:layout_marginTop="16dp"
                 android:layout_weight="1"
-                android:layout_marginTop="16dp"/>
+                android:text="Дата" />
 
         </LinearLayout>
 
