--- a/BusIk/app/src/main/res/layout/activity_book.xml
+++ b/BusIk/app/src/main/res/layout/activity_book.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintVertical_bias="0.0">
@@ -191,7 +191,7 @@
             android:layout_height="wrap_content"
             android:visibility="invisible"
             android:gravity="center"
-            android:text="У вас уже есть бронь на этом рейсе"
+            android:text="У вас уже есть бронь в этом нарпавлении"
             android:textSize="18sp" />
 
     </LinearLayout>
