--- a/BusIk/app/src/main/res/layout/client_item.xml
+++ b/BusIk/app/src/main/res/layout/client_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/client_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#CC03DAC5"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
