--- a/BusIk/app/src/main/res/layout/activity_manage_bus.xml
+++ b/BusIk/app/src/main/res/layout/activity_manage_bus.xml
@@ -71,7 +71,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:inputType="number"
             android:background="@drawable/spinner_bg"
             android:gravity="center"
             android:padding="16dp"
@@ -100,7 +99,7 @@
             android:layout_height="wrap_content"
             android:text="Выберите водителя:" />
 
-        <EditText
+        <TextView
             android:id="@+id/driver_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
