--- a/BusIk/app/src/main/res/layout/activity_manage_bus.xml
+++ b/BusIk/app/src/main/res/layout/activity_manage_bus.xml
@@ -31,7 +31,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/title" />
+        app:layout_constraintTop_toTopOf="@+id/title"
+        app:layout_constraintVertical_bias="0.85" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
