--- a/Operator/OperatorDesktop/src/main/resources/com/example/operatordesktop/manage-trips-view.fxml
+++ b/Operator/OperatorDesktop/src/main/resources/com/example/operatordesktop/manage-trips-view.fxml
@@ -2,9 +2,41 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.operatordesktop.ManageTripsController">
+<AnchorPane prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.operatordesktop.ManageTripsController">
    <children>
-      <ListView fx:id="tripsList" layoutX="-7.0" layoutY="-5.0" prefHeight="409.0" prefWidth="611.0" />
+      <TableView fx:id="tripsList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columns>
+          <TableColumn fx:id="routeCol" editable="false" prefWidth="75.0" text="Маршрут" />
+          <TableColumn fx:id="driverCol" prefWidth="75.0" text="Водитель" />
+          <TableColumn fx:id="dateCol" prefWidth="75.0" text="Дата" />
+          <TableColumn fx:id="timeCol" prefWidth="75.0" text="Время" />
+          <TableColumn fx:id="finishCol" prefWidth="75.0" text="Завершен" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button fx:id="addButton" layoutX="21.0" layoutY="681.0" mnemonicParsing="false" text="Добавить рейс" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="20.0">
+         <font>
+            <Font name="Courier New Bold" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="editButton" layoutX="177.0" layoutY="680.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" text="Изменить рейс" AnchorPane.bottomAnchor="10.0">
+         <font>
+            <Font name="Courier New Bold" size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="deleteButton" layoutX="333.0" layoutY="680.0" mnemonicParsing="false" onAction="#onDeleteTrip" text="Удалить рейс" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="489.0">
+         <font>
+            <Font name="Courier New Bold" size="16.0" />
+         </font>
+      </Button>
+      <Button layoutX="808.0" layoutY="680.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Вернуться" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="20.0">
+         <font>
+            <Font name="Courier New Bold" size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
