--- a/Operator/OperatorDesktop/src/main/resources/com/example/operatordesktop/login-view.fxml
+++ b/Operator/OperatorDesktop/src/main/resources/com/example/operatordesktop/login-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.operatordesktop.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.operatordesktop.controllers.LoginController">
    <VBox alignment="CENTER" layoutY="97.0">
       <children>
           <Label fx:id="messageText" alignment="CENTER" prefHeight="32.0" prefWidth="600.0" text="Авторизация" textAlignment="CENTER">
