--- a/BusIk/app/src/main/res/layout/activity_bus_list.xml
+++ b/BusIk/app/src/main/res/layout/activity_bus_list.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -43,11 +44,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:visibility="invisible"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        android:visibility="invisible"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:backgroundTint="?attr/colorPrimary"
+        app:tint="@color/white"
+        tools:visibility="visible" />
 
 </RelativeLayout>
