--- a/BusIk/app/src/main/res/layout/activity_mark_clients.xml
+++ b/BusIk/app/src/main/res/layout/activity_mark_clients.xml
@@ -9,7 +9,7 @@
     <!-- Заголовок экрана -->
     <TextView
         android:id="@+id/title"
-        android:text="Отметить клиентов"
+        android:text="Отметить пассажиров"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_width="match_parent"
@@ -53,9 +53,11 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:clickable="true"
+            android:backgroundTint="?attr/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/finish_icon" />
+            app:srcCompat="@drawable/finish_icon"
+            app:tint="@color/white"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
