--- a/BusIk/app/src/main/res/layout/activity_trips.xml
+++ b/BusIk/app/src/main/res/layout/activity_trips.xml
@@ -43,11 +43,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:visibility="invisible"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:clickable="true"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        android:visibility="invisible"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="@color/white" />
 
 </RelativeLayout>
